--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "jest": "^29.0.3",
     "ts-jest": "^29.0.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "axios": "^1.0.0",
+    "jsdom": "^20.0.1"
   }
 }
