--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.17",
     "jest": "^29.0.3",
+    "jest-expect-message": "^1.1.3",
     "ts-jest": "^29.0.1",
     "typescript": "^4.8.3"
   },
