--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "cypress:open": "cypress open"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.17",
+    "cypress": "^12.0.2",
     "jest": "^29.0.3",
     "jest-expect-message": "^1.1.3",
     "ts-jest": "^29.0.1",
